# pyHIS

./: .gitignore  README.md  his2tiff.py  his2tiff.spec  pyHIS.py  pyproject.toml
.github/workflows/: release.yml
